--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-widget-fileinput": "^1.0",
-        "kartik-v/yii2-widget-rating": "*"
+        "kartik-v/yii2-widget-rating": "*",
+        "nirvana-msu/yii2-showloading": "1.0.*@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
