--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "kartik-v/yii2-widget-fileinput": "^1.0",
-        "nirvana-msu/yii2-showloading": "1.0.*@dev"
+        "nirvana-msu/yii2-showloading": "1.0.*@dev",
+        "kartik-v/yii2-widgets": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
